--- a/MasterCard-Core-Unofficial/project.json
+++ b/MasterCard-Core-Unofficial/project.json
@@ -52,9 +52,9 @@
     "tags": [ "MasterCard", "netcore", "net core", "api", "core" ],
     "repository": {
       "type": "git",
-      "url": ""
+      "url": "https://github.com/pristinesource/MasterCard-Core-Unofficial"
     },
-    "projectUrl": ""
+    "projectUrl": "https://github.com/pristinesource/MasterCard-Core-Unofficial"
   },
 
   "scripts": {
